fix: letter-spacing

--- a/src/index.css
+++ b/src/index.css
@@ -30,6 +30,7 @@ html {
   font-family: -apple-system, BlinkMacSystemFont, 'Nunito Sans', 'Segoe UI', 'Roboto', 'Oxygen',
   'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
   font-size: 14px;
+  letter-spacing: .3px;
   scroll-behavior: smooth;
 }
 
